--- a/src/Components/styles.css
+++ b/src/Components/styles.css
@@ -1,19 +1,47 @@
 /* user styles */
+.users {
+  text-align: center;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  border: 1px solid #ddd;
+  width: 100%;
+}
+
+.users td {
+  padding: 0.4rem;
+}
+
+.users tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+.users th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #3f3f3f;
+  color: white;
+}
+
 .user-list {
   list-style: none;
   display: flex;
   padding: 0.2rem;
 }
 
-.user-list li {
+.user-list td {
+  display: flex;
   list-style: none;
   padding: 0.2rem;
+  text-align: left;
 }
 
 /* pagination styles */
 .page-numbers {
   display: flex;
+  justify-content: center;
   margin: 0;
+  padding: 1rem;
   list-style: none;
   border-color: none;
   background-color: rgba(0, 0, 0, 0.2);
@@ -38,7 +66,7 @@
 }
 
 .page-numbers li button {
-  color: white;
+  color: black;
   border: none;
   font-size: 1rem;
   cursor: pointer;
